--- a/src/templates.simple/axpansion/server/Shared/IAmHereIndicator.razor
+++ b/src/templates.simple/axpansion/server/Shared/IAmHereIndicator.razor
@@ -1,19 +1,26 @@
 ﻿@implements IDisposable
 <div class="ms-4">
     <nav aria-label="breadcrumb">
-        <ol class="breadcrumb mb-0">
-            @foreach (var link in uri)
-            {
-                if (link != uri.Last())
-                {
-                    <li class="breadcrumb-item h5 mb-0"><a href="@string.Join("/", uri.Take(Array.IndexOf(uri, link) + 1))">@link</a></li>
-                }
-                else
-                {
-                    <li class="breadcrumb-item active h5 mb-0" aria-current="page">@link</li>
-                }
-            }
-        </ol>
+        <AuthorizeView Roles="Administrator">
+            <Authorized>
+                <ol class="breadcrumb mb-0">
+                    @foreach (var link in uri)
+                    {
+                        if (link != uri.Last())
+                        {
+                            <li class="breadcrumb-item h5 mb-0"><a href="@string.Join("/", uri.Take(Array.IndexOf(uri, link) + 1))">@link</a></li>
+                        }
+                        else
+                        {
+                            <li class="breadcrumb-item active h5 mb-0" aria-current="page">@link</li>
+                        }
+                    }
+                </ol>
+            </Authorized>
+            <NotAuthorized>
+               
+            </NotAuthorized>
+        </AuthorizeView>
     </nav>
 </div>
 
