--- a/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
@@ -4,16 +4,31 @@
 @using axosimple.server.Components;
 @using AXOpen.VisualComposer;
 @using AXSharp.Connector;
-
+@using AXOpen.Core;
 @inject IAlertDialogService _alerts
 @inherits RenderableComplexComponentBase<axosimple.UnitTemplate.Unit>
 
+
+<div class="container text-center">
+    <div class="row">
+        <div class="col">
+            <AxoTaskView Component="Entry.Plc.Context.UnitTemplate.AutomatSequence"></AxoTaskView>
+        </div>
+        <div class="col">
+            <AxoTaskView Component="Entry.Plc.Context.UnitTemplate.GroundSequence"></AxoTaskView>
+        </div>
+        <div class="col">
+            <AxoTaskView Component="Entry.Plc.Context.UnitTemplate.ServiceMode"></AxoTaskView>
+        </div>
+    </div>
+</div>
+
 <Unit Component="Entry.Plc.Context.UnitTemplate"
-      SharedTechnologySettings="Entry.Plc.Context.UnitTemplateTechnologySettings.DataManger.Payload"
-      TechnologySettings="Entry.Plc.Context.UnitTemplateTechnologySettings.Shared.Entity"
-      DataManger="Entry.Plc.Context.UnitTemplateProcessData"
-      Data="Entry.Plc.Context.UnitTemplateProcessData.DataManger.Payload"
-      DataHeader="Entry.Plc.Context.UnitTemplateProcessData.Shared.Entity"
-      UnitComponents="Entry.Plc.Context.UnitTemplateComponents"
-      AditionalItems="new ITwinObject[]{Entry.Plc.Context.Safety.Zone_1, Entry.Plc.Context.Safety.Zone_2}">
+                  SharedTechnologySettings="Entry.Plc.Context.UnitTemplateTechnologySettings.DataManger.Payload"
+                  TechnologySettings="Entry.Plc.Context.UnitTemplateTechnologySettings.Shared.Entity"
+                  DataManger="Entry.Plc.Context.UnitTemplateProcessData"
+                  Data="Entry.Plc.Context.UnitTemplateProcessData.DataManger.Payload"
+                  DataHeader="Entry.Plc.Context.UnitTemplateProcessData.Shared.Entity"
+                  UnitComponents="Entry.Plc.Context.UnitTemplateComponents"
+                  AditionalItems="new ITwinObject[] { Entry.Plc.Context.Safety.Zone_1, Entry.Plc.Context.Safety.Zone_2 }">
 </Unit>
