--- a/src/templates.simple/axpansion/server/Components/UnitsSequences.razor
+++ b/src/templates.simple/axpansion/server/Components/UnitsSequences.razor
@@ -54,7 +54,7 @@
                 }
 
                 <div class="m-5">
-                    <VisualComposerContainer Objects="@ObjectCollection"/>
+                    <VisualComposerContainer Objects="@ObjectCollection" Id="@this.Component.Symbol"/>
                 </div>
 
             }
