--- a/src/components.kuka.robotics/app/ix-blazor/Pages/Component_1.razor
+++ b/src/components.kuka.robotics/app/ix-blazor/Pages/Component_1.razor
@@ -1,25 +1,14 @@
 ﻿@page "/Component_1"
 @using AXOpen.Core;
 
-<button class="btn btn-outline-primary" @onclick="WriteTaskTimesToConsole">Write times to console</button>
 
-@code
-{
-    #region WriteTaskDurationToConsole
-    private async Task WriteTaskTimesToConsole()
-    {
-        await Entry.Plc.documentation.componentOne.ExampleCylinder.WriteTaskDurationToConsole();
-    }
-    #endregion
-
-}
 
 <!-- <GenericComponentStatusView> -->
-<AxoComponentStatusView Component="@Entry.Plc.documentation.componentOne.ExampleCylinder"/>
+<AxoComponentStatusView Component="@Entry.Plc.documentation.componentOne.ExampleRobot"/>
 <!-- </GenericComponentStatusView> -->
 
 <!-- <GenericComponentCommandView> -->
-<AxoComponentCommandView Component="@Entry.Plc.documentation.componentOne.ExampleCylinder" />
+<AxoComponentCommandView Component="@Entry.Plc.documentation.componentOne.ExampleRobot" />
 <!-- </GenericComponentCommandView> -->
 
 <!-- <RccComponentStatusView> -->
