--- a/src/templates.simple/axpansion/server/Pages/Settings/ProcessData.razor
+++ b/src/templates.simple/axpansion/server/Pages/Settings/ProcessData.razor
@@ -1,5 +1,8 @@
 ﻿@page "/Settings/ProcessData"
 @using AXSharp.Connector
 @using AXOpen.Data;
-
-<RenderableContentControl Context="@Entry.Plc.Context.ProcessData" Presentation="Command"></RenderableContentControl>
+<AuthorizeView Roles="@Roles.can_access_process_data">
+    <Authorized>
+        <RenderableContentControl Context="@Entry.Plc.Context.ProcessData" Presentation="Command"></RenderableContentControl>
+    </Authorized>
+</AuthorizeView>
