--- a/src/templates.simple/axpansion/server/Pages/Settings/TechnologySettings.razor
+++ b/src/templates.simple/axpansion/server/Pages/Settings/TechnologySettings.razor
@@ -2,4 +2,8 @@
 @using AXSharp.Connector
 @using AXOpen.Data;
 
-<RenderableContentControl Context="@Entry.Plc.Context.TechnologySettings" Presentation="Command"></RenderableContentControl>
+<AuthorizeView Roles="@Roles.can_access_process_settings">
+    <Authorized>
+        <RenderableContentControl Context="@Entry.Plc.Context.TechnologySettings" Presentation="Command"></RenderableContentControl>
+    </Authorized>
+</AuthorizeView>
