--- a/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
@@ -12,13 +12,26 @@
 <div class="container text-center">
     <div class="row">
         <div class="col">
-            <AxoTaskView Component="Entry.Plc.Context.UnitTemplate.AutomatSequence"></AxoTaskView>
+            <AuthorizeView Roles="@Roles.can_run_automat_mode">
+                <Authorized>
+                    <AxoTaskView Component="Unit.AutomatSequence"></AxoTaskView>
+                </Authorized>
+            </AuthorizeView>
         </div>
         <div class="col">
-            <AxoTaskView Component="Entry.Plc.Context.UnitTemplate.GroundSequence"></AxoTaskView>
+            <AuthorizeView Roles="@Roles.can_run_ground_mode">
+                <Authorized>
+                     <AxoTaskView Component="Unit.GroundSequence"></AxoTaskView>
+                </Authorized>
+            </AuthorizeView>
         </div>
         <div class="col">
-            <AxoTaskView Component="Entry.Plc.Context.UnitTemplate.ServiceMode"></AxoTaskView>
+            <AuthorizeView Roles="@Roles.can_run_service_mode">
+                <Authorized>
+                      <AxoTaskView Component="Unit.ServiceMode"></AxoTaskView>
+                </Authorized>
+            </AuthorizeView>
+           
         </div>
     </div>
 </div>
@@ -32,3 +45,8 @@
                   UnitComponents="Entry.Plc.Context.UnitTemplateComponents"
                   AditionalItems="new ITwinObject[] { Entry.Plc.Context.Safety.Zone_1, Entry.Plc.Context.Safety.Zone_2 }">
 </Unit>
+
+@code
+{
+    private axosimple.UnitTemplate.Unit Unit => Entry.Plc.Context.UnitTemplate;
+}
