--- a/src/security/src/AXOpen.Security.Blazor/_Imports.razor
+++ b/src/security/src/AXOpen.Security.Blazor/_Imports.razor
@@ -10,5 +10,5 @@
 @using System.Net.Http
 @using AXOpen.Base.Dialogs;
 @using AXOpen.Security.Blazor.Resources
-
+@using AXOpen.Security.Blazor;
 @inject IStringLocalizer<BlazorResources> Localizer
