fix refactor of eAlertDialogType

--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/FetchData.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/FetchData.razor
@@ -53,6 +53,6 @@ else
 
     public void CreateToast()
     {
-        DialogService.AddAlertDialog(eAlertDialogType.Success, "Test", "test", 30);
+        DialogService.AddAlertDialog(eAlertType.Success, "Test", "test", 30);
     }
 }
