--- a/src/templates.simple/axpansion/server/Components/Unit.razor
+++ b/src/templates.simple/axpansion/server/Components/Unit.razor
@@ -134,6 +134,6 @@
     </button>
 </div>
 
-<AXOpen.Core.Blazor.AxoDialogs.AxoDialogLocator LocatorPath="="@this.Component?.Symbol" ObservedObjects="new[] {this.Component}"></AXOpen.Core.Blazor.AxoDialogs.AxoDialogLocator>
+<AXOpen.Core.Blazor.AxoDialogs.AxoDialogLocator  LocatorPath="@this.Component?.Symbol" ObservedObjects="new[] {this.Component}"></AXOpen.Core.Blazor.AxoDialogs.AxoDialogLocator>
 <AXOpen.Core.Blazor.Dialogs.AxoAlertLocator ObservedObjects="new[] {this.Component}"></AXOpen.Core.Blazor.Dialogs.AxoAlertLocator>
 
