--- a/src/templates.simple/axpansion/server/Pages/Settings/Settings.razor
+++ b/src/templates.simple/axpansion/server/Pages/Settings/Settings.razor
@@ -10,7 +10,38 @@
     }
 </select>
 
+<div class="ms-auto">
+        <select class="form-control" @bind="Culture" @bind:event="oninput">
+            @foreach (var culture in supportedCultures)
+            {
+                <option data value="@culture">@culture.NativeName</option>
+            }
+        </select>
+    </div>
 @code {
+    
+    private CultureInfo[] supportedCultures = new[]
+    {
+        new CultureInfo("en-US"),
+        new CultureInfo("sk-SK"),
+        new CultureInfo("es-ES")
+    };
+
+    private CultureInfo Culture
+    {
+        get => CultureInfo.CurrentCulture;
+        set
+        {
+            // Prevent unnecessary navigation
+            if (!Equals(CultureInfo.CurrentCulture, value) && !Equals(CultureInfo.CurrentUICulture, value))
+            {
+                var cultureEscaped = Uri.EscapeDataString(value.Name);
+                NavigationManager.NavigateTo($"/culture?culture={cultureEscaped}", true);
+            }
+        }
+    }
+
+    
     [Inject]
     IHttpContextAccessor HttpContextAccessor { get; set; }
 
@@ -48,5 +79,6 @@
     protected override void OnInitialized()
     {
         Theme = HttpContextAccessor.HttpContext.Request.Cookies["theme"] ?? defaultTheme;
+        Culture = CultureInfo.CurrentCulture;
     }
 }
