fixies an issue with string localization in dialog

--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogDialogView/AxoDialogDialogView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogDialogView/AxoDialogDialogView.razor
@@ -7,12 +7,12 @@
 <div class="border border-2 rounded">
     <div class="d-flex align-items-center justify-content-center" title="@Component.Symbol">
         @RenderDialogIcon()
-        <h3 class="title m-2">@PlcLocalizer[Component._caption.Cyclic]</h3>
+        <h3 class="title m-2">@Component._caption.GetCyclic()</h3>
         @RenderDialogIcon()
     </div>
 
     <div class="d-flex justify-content-center ">
-        <h3 class="title m-2">@PlcLocalizer[@Component._text.Cyclic]</h3>
+        <h3 class="title m-2">@Component._text.GetCyclic()</h3>
     </div>
 
     <div class="d-flex justify-content-center ">
